//
//  CreateAccountId.swift
//  GroceryApp
//
//  Created by Yenat Feyyisa on 3/8/25.
//

import Foundation
enum CreateAccountId {
    static let passwordField = "passwordField"
    static let confirmPasswordField = "confirmPasswordField"
    static let firstNameField = "firstNameField"
    static let lastNameField = "lastNameField"
    static let emailField = "emailField"
    static let createAccountScroll = "createAccountScroll"
    static let createAccountButton = "createAccountButton"
    static let userCreatedSuccessfully = "userCreatedSuccessfully"
    static let errorMessage = "errorMessage"
}
