...
            Spacer()
            VStack {
                Button {
                    coordinator.navigate(to: Destination.createAccount)
                }
                label: {
                    Text("Create An Account")
                        .font(.headline)
                        .foregroundStyle(.white)
                        .frame(maxWidth: .infinity, minHeight: 50)
                        .background(Color.black)
                        .cornerRadius(25)
                        .padding(.horizontal, 40)
...
                }
                .accessibilityIdentifier("joinpageCreateAccountButton")
                Button {
                    coordinator.navigate(to: Destination.loginPage)
                }
                label: {
                    Text("Login")
                        .font(.headline)
                        .foregroundStyle(.black)
                        .frame(maxWidth: .infinity, minHeight: 50)
                        .overlay(
                            RoundedRectangle(cornerRadius: 25)
                                .stroke(Color.black, lineWidth: 2)
...
