...
                    .padding(.top, 10)
                    Spacer()
                    Button {
                        coordinator.navigate(to: Destination.joinPage)
                    }
                    label: {
                        Text("Next")
                            .font(.headline)
                            .foregroundStyle(.black)
                            .frame(maxWidth: .infinity, minHeight: 50)
                            .background(Color.orange)
                            .cornerRadius(25)
                            .padding(.horizontal, 40)
...
